<resources>
    <string name="app_name">إتكئ</string>
    <string name="select">نوع العضو</string>
    <string name="profile">شخصي</string>
    <string name="p_us">من نحن</string>
    <string name="p_positive">كُن ايجابيا</string>
    <string name="p_chat">الدردشة</string>
    <string name="p_reminder">تذكيرات</string>
    <string name="p_test">تحديد مستوى المرض</string>
    <string name="p_exersice">تمارين</string>
    <string name="open">فتح القائمة </string>
    <string name="clos">اغلاق القائمة </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>